tests/fixtures/valid/directory_entry.desktop
[Desktop Entry]
Type=Directory
Name=Custom Directory
Name[fr]=Répertoire Personnalisé
Icon=folder-custom
Comment=A custom directory entry
