tests/fixtures/invalid/invalid_type.desktop
[Desktop Entry]
Type=UnknownType
Name=Invalid Type
Exec=invalid-type-app
